@@ -1,2 +1,0 @@
-# $Id: Trial.properties,v 1.2 2004/02/04 23:52:55 mog Exp $
-
