@@ -26,7 +26,6 @@ import java.util.Map;
 
 import net.sf.drftpd.DuplicateElementException;
 import net.sf.drftpd.event.UserEvent;
-import net.sf.drftpd.event.listeners.Trial;
 import net.sf.drftpd.master.command.plugins.Nuke;
 import net.sf.drftpd.util.CalendarUtils;
 
@@ -38,6 +37,7 @@ import org.drftpd.dynamicdata.KeyedMap;
 import org.drftpd.master.ConnectionManager;
 import org.drftpd.plugins.RaceStatistics;
 import org.drftpd.plugins.Statistics;
+import org.drftpd.plugins.Trial;
 import org.drftpd.usermanager.HostMaskCollection;
 import org.drftpd.usermanager.User;
 import org.drftpd.usermanager.UserFileException;
