@@ -1,0 +1,2 @@
+# $Id: Trial.properties 399 2004-02-04 23:52:57Z mog $
+
