@@ -1,4 +1,4 @@
-# $Id: TrialSiteBot.properties,v 1.4 2004/04/25 17:46:16 mog Exp $
+# $Id: TrialSiteBot.properties 517 2004-04-25 17:46:21Z mog $
 passedunique=[passed] ${user} passed unique ${name}, next period begins after ${bonusexpires}
 trialunique=[failed] ${user} is on unique ${name} with ${bytesleft} left until ${uniqueexpires}
 
